Add visual indicator for tasks with subtasks
New Feature: Visual subtask indicator showing completion status

Features:
  ✓ Shows 📋 icon with count (completed/total) on each task
  ✓ Displays on both task list and Today's Tasks widget
  ✓ Format: 📋 2/5 (2 subtasks complete out of 5)
  ✓ Appears next to task name in task list view
  ✓ Appears on right side in Today's Tasks widget
  ✓ Clickable - opens Notes modal to view/edit subtasks
  ✓ Shows tooltip on hover with full completion status

Styling:
  ✓ Cyan badge with transparent background
  ✓ Matches JARVIS theme colors
  ✓ Small, compact design doesn't clutter task list
  ✓ Slightly different styling for widget vs task list

User Experience:
  ✓ Users can see at a glance which tasks have subtasks
  ✓ Quick progress indication - see how many are complete
  ✓ Clickable badge jumps to Notes for subtask management
  ✓ No indicator appears if task has no subtasks

Locations:
  ✓ Task list view (detail view)
  ✓ Today's Tasks dashboard widget
  ✓ Shows on all filtered views (today, week, high priority, etc)

Example Display:
  Task Name 📋 2/5 (2 of 5 subtasks done)

--- a/index.html
+++ b/index.html
@@ -4535,12 +4535,33 @@
                                 </div>
                             </div>
                             <div id="today-tasks-${priority}" style="display: ${isCollapsed ? 'none' : 'flex'}; flex-direction: column; gap: 8px; margin-top: 10px;">
-                                ${tasks.slice(0, 5).map(task => `
+                                ${tasks.slice(0, 5).map(task => {
+                                    const subtasks = task.subtasks ? task.subtasks.filter(st => typeof st === 'object') : [];
+                                    const completedSubtasks = subtasks.filter(st => st.completed).length;
+                                    return `
                                     <div style="background: rgba(0, 212, 255, 0.05); padding: 8px; border-radius: 3px; border-left: 2px solid ${config.color}; font-size: 0.8rem;">
-                                        <div style="color: var(--text-primary); margin-bottom: 3px;">${task.moduleIcon} ${task.label}</div>
-                                        <div style="color: var(--text-secondary); font-size: 0.75rem;">${task.moduleName} • Est: ${task.estimate || 0}h</div>
+                                        <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                                            <div>
+                                                <div style="color: var(--text-primary); margin-bottom: 3px;">${task.moduleIcon} ${task.label}</div>
+                                                <div style="color: var(--text-secondary); font-size: 0.75rem;">${task.moduleName} • Est: ${task.estimate || 0}h</div>
+                                            </div>
+                                            ${subtasks.length > 0 ? `
+                                                <span style="
+                                                    background: rgba(0, 212, 255, 0.2);
+                                                    border: 1px solid rgba(0, 212, 255, 0.3);
+                                                    color: var(--primary);
+                                                    font-size: 0.65rem;
+                                                    padding: 1px 4px;
+                                                    border-radius: 2px;
+                                                    font-weight: 600;
+                                                    white-space: nowrap;
+                                                " title="Subtasks: ${completedSubtasks}/${subtasks.length} complete">
+                                                    📋 ${completedSubtasks}/${subtasks.length}
+                                                </span>
+                                            ` : ''}
+                                        </div>
                                     </div>
-                                `).join('')}
+                                `}).join('')}
                                 ${tasks.length > 5 ? `<div style="color: var(--text-secondary); font-size: 0.75rem; text-align: center;">+${tasks.length - 5} more tasks</div>` : ''}
                             </div>
                         </div>
@@ -4890,6 +4911,11 @@
                 const recurrence = typeof taskData === 'object' ? taskData.recurrence : 'none';
                 const taskTags = typeof taskData === 'object' && Array.isArray(taskData.tags) ? taskData.tags : [];
 
+                // Get subtask info
+                const subtasks = typeof taskData === 'object' && Array.isArray(taskData.subtasks) ? taskData.subtasks : [];
+                const completedSubtasks = subtasks.filter(st => st.completed).length;
+                const hasSubtasks = subtasks.length > 0;
+
                 const recurrenceEmoji = {
                     'daily': '📅',
                     'weekly': '📆',
@@ -4938,6 +4964,25 @@
                                 <!-- Completion checkbox -->
                                 <input type="checkbox" id="${taskId}" ${isCompleted ? 'checked' : ''} onchange="updateTaskInProject('${storageKey}', '${project.id}', '${taskId}')">
                                 <label for="${taskId}" style="margin: 0;">${label}</label>
+                                <!-- Subtask indicator -->
+                                ${hasSubtasks ? `
+                                    <span style="
+                                        background: rgba(0, 212, 255, 0.2);
+                                        border: 1px solid rgba(0, 212, 255, 0.4);
+                                        color: var(--primary);
+                                        font-size: 0.7rem;
+                                        padding: 2px 6px;
+                                        border-radius: 3px;
+                                        font-weight: 600;
+                                        white-space: nowrap;
+                                        cursor: pointer;
+                                        transition: all 0.2s;
+                                    "
+                                    title="Click Notes to view subtasks"
+                                    onclick="openNotesModal('${taskId}')">
+                                        📋 ${completedSubtasks}/${subtasks.length}
+                                    </span>
+                                ` : ''}
                             </div>
                             ${tagsHTML}
                             <div class="task-meta">
