--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         header {
             text-align: center;
-            margin-bottom: 60px;
+            margin-bottom: 40px;
             animation: fadeInDown 0.8s ease-out;
             position: relative;
         }
@@ -178,10 +178,12 @@
             display: flex;
             justify-content: center;
             gap: 30px;
-            margin-top: 20px;
+            margin-top: -45px;
+            margin-bottom: 20px;
             font-size: 0.85rem;
             letter-spacing: 1px;
             animation: fadeInUp 0.8s ease-out 0.4s both;
+            padding-top: 10px;
         }
 
         .status-item {
@@ -1447,6 +1449,7 @@
             .status-line {
                 flex-direction: column;
                 gap: 12px;
+                margin-top: -35px;
             }
         }
 
@@ -1993,6 +1996,7 @@
             .status-line {
                 flex-direction: column;
                 gap: 5px;
+                margin-top: -30px;
             }
 
             button.sidebar-tab-btn:active {
