--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             text-shadow: 0 0 40px rgba(0, 212, 255, 0.3);
             filter: drop-shadow(0 0 20px rgba(0, 212, 255, 0.2));
             order: 2;
-            flex: 0 0 auto;
+            flex: 1 0 300px;
             text-align: center;
         }
 
@@ -1998,7 +1998,7 @@
                 margin-bottom: 5px;
                 margin-right: auto;
                 order: 2;
-                flex: 0 0 auto;
+                flex: 1 0 250px;
             }
 
             .subtitle {
